FEAT: 텍스트 생성 api dto 변경